<resources>
    <string name="app_name">GearLocker</string>
    <string name="create_an_account"><u>Create an account</u></string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="messages">Messages</string>
    <string name="gear_management">Management</string>
    <string name="gear_inventory">Inventory</string>
    <string name="action_settings">Action Settings</string>
    <string name="item_type">Item type</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="see_less">See Less</string>
    <string name="see_more">See More</string>
    <string name="demo_check_in_title"><b>4 Person Tent #2</b></string>
    <string name="complete_check_in">Complete Check-In</string>
    <string name="cancel_check_in">Cancel Check-In</string>
    <string name="condition_new">New</string>
    <string name="condition_good">Good</string>
    <string name="condition_average">Average</string>
    <string name="condition_bad">Bad</string>
    <string name="condition_replace">Replace</string>
    <string name="check_in_photo">Check-In Photo</string>
    <string name="check_out_photo">Check-Out Photo</string>
    <string name="rent_duration">Rented For:</string>
    <string name="check_out_condition">Check-Out Condition:</string>
    <string name="demo_item_description">Designed for the climber looking for a single pair to do it all, the La Sportiva Tarantulace are jack-of-all-trades climbing shoes comfortable enough for all-day climbs or a trip to the rock gym.</string>
    <string name="demo_stock_information">
        Est. Value: $50.00
        \nAvailable: 1 pair
        \nTotal: 5 pairs</string>
    <string name="delete_an_item">Delete an item</string>
    <string name="edit_item">Edit Item</string>
    <string name="condition">Condition:</string>
    <string name="dashboard">Dashboard</string>
    <string name="rental_text">Rental text</string>
    <string name="inventory">Inventory</string>
    <string name="rentals">Rentals</string>
    <string name="return_to_dashboard"><u>Return to dashboard</u></string>
    <string name="enter_manage_pass">Please enter the gear management passcode</string>
    <string name="passcode">Passcode</string>
    <string name="manage_gear">Manage Gear</string>
    <string name="title_activity_main_management">MainActivity</string>
    <string name="rental_title">Rental Title</string>
    <string name="check_out">Check Out</string>
    <string name="forms">Forms</string>
    <string name="check_in">Check In</string>
    <string name="overview">Overview</string>
    <string name="item_added_to_inventory">You added an item to the inventory</string>
    <string name="view_inventory">View Inventory</string>
    <string name="add_another_item">Add Another Item</string>
    <string name="add_club">Add Club</string>
    <string name="add_new_item_category">Add New Item Category</string>
    <string name="category_name">Category Name</string>
    <string name="add_category">Add Category</string>
    <string name="add_prompt">Which would you like to add?</string>
    <string name="add_item">Add Item</string>
    <string name="rental_start_date">Rental Start Date:</string>
    <string name="rental_end_date">Rental End Date:</string>
    <string name="total">Total:</string>
    <string name="rental_items">Rental Items</string>
    <string name="quantity">Quantity</string>
    <string name="cost">Cost</string>
    <string name="rental_item">Rental Item</string>
    <string name="add_demo_data">Add Demo Data</string>
    <string name="log_out">Log Out</string>
    <string name="login_with_email">Login with Email</string>
    <string name="mountains">Mountains</string>
    <string name="login_with_rosefire">Login with RoseFire</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="edit">Edit</string>
</resources>