<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    app:cardCornerRadius="10dp"
    android:gravity="center_horizontal"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:padding="10dp"
        android:textSize="18sp"
        android:text="@string/item_type"
        android:id="@+id/item_type_text"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:background="@color/colorDarkBlue"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <Button
        android:paddingHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/item_1"
        android:layout_gravity="left"
        android:gravity="center_vertical"
        android:background="@color/colorGrey"/>

    <Button
        android:paddingHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/item_2"
        android:layout_gravity="left"
        android:gravity="center_vertical"
        android:background="@color/colorGrey"/>

    <Button
        android:paddingHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/item_3"
        android:layout_gravity="left"
        android:gravity="center_vertical"
        android:background="@color/colorGrey"/>

    <Button
        android:layout_marginTop="8dp"
        android:paddingHorizontal="30dp"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="@drawable/round_button"
        android:text="@string/see_more">

    </Button>


</LinearLayout>