<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/add_new_item_category"
        android:textAlignment="center"
        android:textColor="@color/colorGrey"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/category_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/category_name"
        android:background="@color/colorDarkBlue"
        android:padding="10dp"/>

    <Button
        android:id="@+id/add_category_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_category"
        android:layout_margin="10dp"
        android:background="@color/colorPrimaryDark"/>

</LinearLayout>