<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorDarkBlue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/app_name"
        android:padding="10dp"
        android:textColor="#DEDFDE"
        android:textSize="44sp" />

    <Button
        android:id="@+id/login_button_rosefire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@color/colorAccent"
        android:text="@string/login_with_rosefire" />

    <Button
        android:id="@+id/login_email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button_rosefire"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login_with_email" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email_button"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/mountains"
        android:src="@drawable/ic_mountains" />

    </RelativeLayout>