<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:background="@color/colorBlue">

    <androidx.cardview.widget.CardView
        android:id="@+id/gear_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/colorGrey"
        app:cardCornerRadius="8dp"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/gear_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/demo_check_in_title"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/check_out_condition_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gear_name_text_view"
                android:text="@string/check_out_condition"
                android:textSize="16sp"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/rent_duration_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/check_out_condition_text_view"
                android:text="@string/rent_duration"
                android:textSize="16sp"
                android:layout_margin="5dp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TableLayout
        android:id="@+id/photo_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gear_summary"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:stretchColumns="0,1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:background="@color/colorGrey"
                android:gravity="center"
                android:text="@string/check_out_photo"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="0"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorGrey"
                android:gravity="center"
                android:text="@string/check_in_photo"
                android:textSize="18sp" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/ic_gear"
                android:contentDescription="photo_from_check_out" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/ic_gear"
                android:contentDescription="photo_from_check_in"/>
        </TableRow>
    </TableLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/check_in_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/photo_view"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorGrey">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/replace_text_view"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingStart="5dp"
                android:text="@string/condition_replace" />

            <TextView
                android:id="@+id/bad_text_view"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/replace_text_view"
                android:text="@string/condition_bad"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/average_text_view"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/bad_text_view"
                android:paddingStart="8dp"
                android:text="@string/condition_average"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/good_text_view"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/average_text_view"
                android:paddingStart="15dp"
                android:text="@string/condition_good"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/new_text_view"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/good_text_view"
                android:paddingStart="24dp"
                android:text="@string/condition_new"
                android:textAlignment="center" />


            <SeekBar
                android:id="@+id/seekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/replace_text_view"
                android:max="4"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:progress="3"
                android:progressTint="@color/colorDarkBlue" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_in_rating"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorRed"
        android:text="@string/cancel_check_in"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_in_rating"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorGreen"
        android:text="@string/complete_check_in"
        android:textAlignment="center" />

</RelativeLayout>