<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rental_home_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue">

    <Button
        android:id="@+id/overview_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:background="@drawable/round_button_grey"
        android:text="@string/overview"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/checkin_button" />

    <Button
        android:id="@+id/checkin_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:background="@drawable/round_button_grey"
        android:text="@string/check_in"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/checkout_button" />

    <Button
        android:id="@+id/checkout_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:background="@drawable/round_button_grey"
        android:text="@string/check_out"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/forms_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:background="@drawable/round_button_grey"
        android:text="@string/forms"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/checkout_button" />

    <ImageView
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_mountains"
        android:layout_marginBottom="70dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>