<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBlue"
    android:paddingTop="25dp">

    <Button
        android:id="@+id/rentals_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:text="@string/rentals"
        android:textSize="16sp"
        android:background="@drawable/round_button_grey"
        app:layout_constraintBottom_toTopOf="@+id/inventory_button" />

    <Button
        android:id="@+id/inventory_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:textSize="16sp"
        android:text="@string/inventory"
        android:background="@drawable/round_button_grey"
        app:layout_constraintBottom_toTopOf="@id/messages_button" />

    <Button
        android:id="@+id/messages_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:textSize="16sp"
        android:text="@string/messages"
        android:background="@drawable/round_button_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/messages_button"
        android:id="@+id/return_to_dash_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_to_dashboard"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="onClick"
        android:clickable="true"/>

    <ImageView
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_mountains"
        android:layout_marginBottom="40dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>