<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:padding="10dp"
        android:background="@color/colorDarkBlue"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="2"
            android:id="@+id/rentalitem_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/rental_item"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/quantity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/quantity"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/cost_text"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/cost"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>