<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/add_item_confirmation"
    android:background="@color/colorDarkBlue">

    <TextView
        android:id="@+id/add_confirmation_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_added_to_inventory"
        android:textAlignment="center"
        android:padding="10dp"
        android:textColor="@color/colorGrey"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_below="@id/add_confirmation_text_view"
        android:background="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/divider"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/view_inventory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_inventory"
            android:background="@color/colorAccent"
            android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/add_additional_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_another_item"
            android:background="@color/colorPrimaryDark"
            android:layout_marginStart="5dp"/>
    </LinearLayout>


</RelativeLayout>