<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBlue"
    android:padding="5dp">

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_prompt"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_margin="5dp"
        android:textColor="@color/colorGrey"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_below="@id/dialog_message"
        android:background="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        android:text="@android:string/cancel"
        android:background="@color/colorRed"
        android:padding="5dp"/>

    <Button
        android:id="@+id/add_category_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toRightOf="@id/cancel_button"
        android:text="@string/add_category"
        android:background="@color/colorAccent"
        android:padding="5dp"/>

    <Button
        android:id="@+id/add_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_alignParentEnd="false"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toRightOf="@id/add_category_button"
        android:text="@string/add_item"
        android:background="@color/colorPrimaryDark"
        android:padding="5dp"/>


</RelativeLayout>